--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
+vendor/
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
